# TuringMachine

./: CMakeLists.txt  README.md  alphabet.h  command.h  doctest.h  executionChoice.h  input.csv  main.cpp  output.csv  output2.csv  parser.h  t1.csv  t2.csv  t3.csv  tape.h  tapeCell.h  turingMachine.h
src/: alphabet.cpp  command.cpp  executionChoice.cpp  parser.cpp  tape.cpp  tapeCell.cpp  turingMachine.cpp
